k8s/http-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-bar
  template:
    metadata:
      labels:
        app: echo-bar
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo
        args:
        - "-text=bar"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-bar
spec:
  selector:
    app: echo-bar
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-foo
  template:
    metadata:
      labels:
        app: echo-foo
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo
        args:
        - "-text=foo"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-foo
spec:
  selector:
    app: echo-foo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
